# Advent-of-Code-2025

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  compile_flags.txt  crash_log.txt  log.txt
dev/: component.py  system.py  video_gif.bat
src/app/: Advents.cpp  Advents.hpp  App.cpp  App.hpp  DropManager.hpp
src/core/: Engine.cpp  Engine.hpp  InputManager.cpp  InputManager.hpp  SoundManager.hpp  Timer.cpp  Timer.hpp  engine_commons.hpp  global.cpp  global.hpp  main.cpp
src/imgui/: ImGuiUtils.cpp  ImGuiUtils.hpp
src/renderer/: AppGui.cpp  AppGui.hpp
src/res/: Res.cpp  Res.hpp  autogen_res.hpp
src/tools/: Common.hpp  Math.cpp  Math.hpp  Mouse.cpp  Mouse.hpp  Profiler.cpp  Profiler.hpp
